K8S/minio.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: minio
  namespace: default  # Change to default namespace
spec:
  replicas: 1
  selector:
    matchLabels:
      app: minio
  template:
    metadata:
      labels:
        app: minio
    spec:
      containers:
        - name: minio
          image: minio/minio
          args:
            - server
            - /data
            - "--console-address=:9001"  # Ensure console is on port 9001
          ports:
            - containerPort: 9000   # MinIO server port
            - containerPort: 9001   # MinIO console port
          volumeMounts:
            - name: minio-data
              mountPath: /data
      volumes:
        - name: minio-data
          persistentVolumeClaim:
            claimName: minio-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: minio
  namespace: default  # Change to default namespace
spec:
  type: NodePort  # Change to NodePort to access it externally
  ports:
    - name: minio-port   # Name for MinIO server port
      port: 9000
      targetPort: 9000
      nodePort: 30000  # Access MinIO server
    - name: minio-console-port  # Name for MinIO console port
      port: 9001
      targetPort: 9001
      nodePort: 30001  # Access MinIO console
  selector:
    app: minio
