K8S/screen_web.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: screen-web
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: screen-web
  template:
    metadata:
      labels:
        app: screen-web
    spec:
      containers:
        - name: screen-web
          image: tal5041996/screen_web:latest  
          imagePullPolicy: Always
          ports:
            - containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: screen-web
  namespace: default
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30002
  selector:
    app: screen-web
